
 *) By default we no longer flush every piece of data we get from the
    FastCGI server to the client.  This allows the FastCGI server to
    release without having to wait for the client flush to complete.
    The old behaviour can revived with the -flush argument to AppClass.

 *) I renamed some of the directives for consistency (the old names
    still work).  
        
        AppClass -> FastCgiServer,  FCGIConfig -> FastCgiConfig,
        ExternalAppClass -> FastCgiUnmanagedServer

 *) Directive arguments are no longer case sensitive.

 *) The module now uses hard_timeout() rather than soft_timeout.  This
    means that the module will longjump out of the request if the
    drop-dead timeout expires (set with Apache's Timeout directive, the
    default is 5min) or if the client closes the connection (SIGPIPE).
    This is more typical for a Apache modules and I'm not convinced we
    properly handle all of the error cases well enough to use
    soft_timeout (I can think of one place we don't anyway). This means
    your FastCGI application can see SIGPIPE.

 *) SIGPIPE is now ignored by default in FastCGI servers spawned by
    Apache.  Without this the default behaviour is exit().

 *) It should (I think) run now under DSO now.

 *) The bug which prevented sending of binary data in 2.1b1 is fixed.

 *) The broken -initial-env bug ins 2.1b1 is fixed.

 *) Maybe some other stuff.



*** Well there's a big gap here.  Maybe I'll go back and extract the CVS
commit notes and stick 'em in here.. when I get some free time.	;)

    --robs  (8 Feb 99)


*** Originally from docs/README..

Apache[X1.03.01]/mod_fastcgi[02.00.05] 19970909 unsupported
From: Stanley Gambarin <stanleyg@cs.bu.edu>

 *) Yet more changes to the source distribution.  Separated out
    the Tcl dynamic string and buffer libraries into separate files.
    Did the same for the OS library, however, it is not really an
    abstraction... more like a bunch of wrappers.  Added to DEVNOTES